=== HEAD

* Fix statement freeing in the ibmdb adapter (jeremyevans)

* Make single and class table inheritance plugins handle usage of set_dataset in a subclass (jeremyevans)

* Allow validates_schema_types in validation_helpers plugin accept an options hash (jeremyevans)

* Deprecate Model.set_primary_key taking multiple arguments (jeremyevans)

* Make auto_validations plugin work with databases that don't support index parsing (jeremyevans)

* Model classes will no longer call Database#schema if it isn't supported (jeremyevans)

* Speed up Model.with_pk and with_pk! class methods (jeremyevans)

* Speed up Dataset#clone when called without an argument (jeremyevans)

* Deprecate Postgres::PGRangeOp#{starts_before,ends_after} (jeremyevans)

* Deprecate global use of pagination, pretty_table, query, select_remove, schema_caching, and schema_dumper extensions (jeremyevans)

* Deprecate Dataset.introspect_all_columns in the columns_introspection extension (jeremyevans)

* Add empty_array_ignore_nulls extension for ignoring null handling for IN/NOT with an empty array (jeremyevans)

* Deprecate Sequel.empty_array_handle_nulls accessor (jeremyevans)

* Deprecate Sequel.{k,ts,tsk}_require and Sequel.check_requiring_thread (jeremyevans)

* Discontinue use of manual thread-safe requiring (jeremyevans)

* Deprecate using an unsupported client_min_messages setting on PostgreSQL (jeremyevans)

* Deprecate passing non-hash 4th argument to Dataset#join_table (jeremyevans)

* Deprecate passing non-hash 2nd argument to Dataset#union/intersect/except (jeremyevans)

* Deprecate one_to_many with :one_to_one option raising an error (jeremyevans)

* Automatically typecast hash and array to string for string columns in the looser_typecasting extension (jeremyevans)

* Deprecate automatic typecasting of hash and array to string for string columns (jeremyevans)

* Deprecate :eager_loader and :eager_grapher association options getting passed 3 separate arguments (jeremyevans)
